# pydsscodec

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
python/pydsscodec/: __init__.py
src/: lib.rs
tests/: test_api.py
