[package]
name = "pydsscodec"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for the dss-codec Rust decoder"
homepage = "https://github.com/gaspardpetit/pydsscodec"
repository = "https://github.com/gaspardpetit/pydsscodec"
documentation = "https://github.com/gaspardpetit/pydsscodec#readme"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dss-codec = { path = "ext/dss-codec/dss-codec" }
pyo3 = { version = "0.23.4", features = ["abi3-py39"] }
