[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pydsscodec"
version = "0.1.0"
description = "Python bindings for the dss-codec Rust decoder"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kieran Hirpara" }, { name = "Gaspard Petit" }]
keywords = ["audio", "dss", "ds2", "codec", "bindings"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/gaspardpetit/pydsscodec"
Repository = "https://github.com/gaspardpetit/pydsscodec"
Upstream = "https://github.com/gaspardpetit/dss-codec"

[tool.maturin]
python-source = "python"
module-name = "pydsscodec._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
